--- a/06-spring-boot-rest-thymleaf/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld.html
+++ b/06-spring-boot-rest-thymleaf/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld.html
@@ -2,8 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Thymleaf demo</title>
+    <link rel="stylesheet" th:href="@{/css/demo.css}"/>
 </head>
 <body>
-<p th:text="'Time on the server is: '+ ${theDate}"></p>
+<p th:text="'Time on the server is: '+ ${theDate}" class="basic"></p>
 </body>
 </html>
