HelloWorldController name display

--- a/06-spring-boot-rest-thymleaf/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld-backup.html
+++ b/06-spring-boot-rest-thymleaf/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld-backup.html
@@ -2,10 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Thymleaf demo</title>
+    <link rel="stylesheet" th:href="@{/css/demo.css}"/>
 </head>
 <body>
-Hello New Person!
-<br><br>
-Student Name: <span th:text="${message}"/>
+<p th:text="'Time on the server is: '+ ${theDate}" class="basic"></p>
 </body>
 </html>
