--- a/06-spring-boot-rest-thymleaf/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld-form.html
+++ b/06-spring-boot-rest-thymleaf/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld-form.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/demo.css}"/>
 </head>
 <body>
-<form th:action="@{/processForm-V2}" method="GET">
+<form th:action="@{/processForm-V3}" method="POST">
     <input type="text" name="studentName" placeholder="Type your name"/>
 
     <input type="submit">
