--- a/06-spring-boot-rest-thymleaf/01-thymeleafdemo-helloworld/src/main/resources/templates/student-form.html
+++ b/06-spring-boot-rest-thymleaf/01-thymeleafdemo-helloworld/src/main/resources/templates/student-form.html
@@ -4,20 +4,37 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Form</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" th:href="@{/css/demo.css}"/>
 </head>
 <body>
+
+
 <form th:action="@{/processStudentForm}" th:object="${student}" method="POST">
-
-
-          First Name: <input type="text" th:field="*{firstName}"/>
-  </br>
-            Last  Name: <input type="text" th:field="*{lastName}"/>
-    </br>
-
-
-    <input type="submit">
+    <div class="form-group">
+        <label  for="firstName">First Name:</label>
+        <input  type="text" id="firstName" class="form-control"   th:field="*{firstName}"/>
+    </div>
+    <div class="form-group">
+        <label for="lastName"> Last  Name:</label>
+        <input type="text" id="lastName"  class="form-control"  th:field="*{lastName}"/>
+    </div>
+    <div class="form-group">
+        <label for="country"> Country:</label>
+        <select type="text" id="country"  class="form-control"  th:field="*{country}">
+            <option th:value="Brazil">
+                Brazil
+            </option>
+            <option th:value="Greece">
+                Greece
+            </option>
+            <option th:value="Denmark">
+                Denmark
+        </option>
+        </select>
+    </div>
+    <br>
+    <button class="btn btn-default" type="submit">Submit</button>
 </form>
-<!--<p th:text="'Time on the server is: '+ ${theDate}" class="basic"></p>-->
 </body>
 </html>
