--- a/06-spring-boot-rest-thymleaf/01-thymeleafdemo-helloworld/src/main/resources/templates/welcome-student-form.html
+++ b/06-spring-boot-rest-thymleaf/01-thymeleafdemo-helloworld/src/main/resources/templates/welcome-student-form.html
@@ -10,5 +10,6 @@
 Welcome to my world <span th:text="${student.firstName} +' '+${student.lastName}"> </span>!
 </br>
 I heard that you come from <span th:text="${student.country}"> </span>!
+Your favorite language seems to be  <span th:text="${student.favoritelanguage}"> </span>!
 </body>
 </html>
