--- a/06-spring-boot-rest-thymleaf/validationdemo/src/main/resources/templates/customer-form.html
+++ b/06-spring-boot-rest-thymleaf/validationdemo/src/main/resources/templates/customer-form.html
@@ -24,6 +24,11 @@
           th:errors="*{age}"
           class="error"></span>
     <br><br>
+  Post Code: <input type="text" th:field="*{postalCode}">
+  <span th:if="${#fields.hasErrors('postalCode')}"
+        th:errors="*{postalCode}"
+        class="error"></span>
+  <br><br>
     <input type="submit" value="Submit">
 </form>
 </body>
