--- a/06-spring-boot-rest-thymleaf/validationdemo/src/main/resources/templates/customer-form.html
+++ b/06-spring-boot-rest-thymleaf/validationdemo/src/main/resources/templates/customer-form.html
@@ -29,6 +29,11 @@
         th:errors="*{postalCode}"
         class="error"></span>
   <br><br>
+  Entry Code: <input type="text" th:field="*{entryCode}">
+  <span th:if="${#fields.hasErrors('entryCode')}"
+        th:errors="*{entryCode}"
+        class="error"></span>
+  <br><br>
     <input type="submit" value="Submit">
 </form>
 </body>
