--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
@@ -11,6 +11,9 @@
 <div class="container">
     <h3>Employees</h3>
     <hr>
+    <a th:href="@{/employees/showFromForAdd}"
+        class="btn btn-primary btn-sm mb-3">
+        Add employee</a>
     <table class="table table-bordered table-striped">
         <thead class="table-dark">
             <tr>
