--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
@@ -20,6 +20,7 @@
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Email</th>
+                <th>Action</th>
             </tr>
         </thead>
         <tbody>
@@ -27,6 +28,16 @@
                 <td th:text="${tempEmployee.firstName}"></td>
                 <td th:text="${tempEmployee.lastName}"></td>
                 <td th:text="${tempEmployee.email}"></td>
+                <td>
+                    <a th:href="@{/employees/showFromForUpdate(employeeId=${tempEmployee.id})}"
+                       class="btn btn-info btn-sm">
+                        Update</a>
+
+                    <a th:href="@{/employees/delete(employeeId=${tempEmployee.id})}"
+                       class="btn btn-danger btn-sm"
+                        onclick="if (!confirm('Are you sure you want to delete the Employee'))return false">
+                        Delete</a>
+                </td>
 
             </tr>
         </tbody>
