--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Home Page</title>
@@ -8,5 +9,21 @@
 <h2>That is the Home Page</h2>
 <hr>
 Welcome to our home page
+<hr>
+<div>
+    User Name: <span sec:authantication="principal.username"></span>
+</div>
+<div>
+Role(s): <span sec:authantication="principal.authorities"></span>
+</div>
+<hr>
+<a th:href="@{/leaders}">Leader Secrets Info</a>
+<br><br>
+
+<a th:href="@{/systems}">Admins Secrets Info</a>
+<hr>
+<form action="#" th:action="@{/logout}" method="POST">
+    <input type="submit" value="Logout"/>
+</form>
 </body>
 </html>
