connect db users/authorities table

--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/leaders.html
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/leaders.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,5 +9,7 @@
 <div>
   <span>This is our secret page Leaders</span>
 </div>
+
+<a th:href="@{/}">Go Back</a>
 </body>
 </html>
