--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
@@ -17,11 +17,15 @@ Welcome to our home page
 Role(s): <span sec:authentication="principal.authorities"></span>
 </div>
 <hr>
-<a th:href="@{/leaders}">Leader Secrets Info</a>
-<br><br>
+<div sec:authorize="hasRole('MANAGER')">
+    <a th:href="@{/leaders}">Leader Secrets Info</a>
+    <br><br>
 
+</div>
+<div sec:authorize="hasRole('ADMIN')">
 <a th:href="@{/systems}">Admins Secrets Info</a>
 <hr>
+</div>
 <form action="#" th:action="@{/logout}" method="POST">
     <input type="submit" value="Logout"/>
 </form>
