--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/systems.html
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/systems.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Admins' Page</title>
@@ -9,5 +9,6 @@
 <div>
   <span>This is our secret page Admins</span>
 </div>
+<a th:href="@{/}">Go Back</a>
 </body>
 </html>
